# mgba-rs

./: .gitmodules  Cargo.toml  README.md
mgba-sys/: Cargo.toml  build.rs  shim.c  wasi-stubs.c  wrapper.h
src/: arm_core.rs  audio.rs  core.rs  gba.rs  lib.rs  log.rs  sio.rs  sync.rs  timing.rs  trapper.rs
tools/: gen-wasi-stubs.py
