[package]
name = "mgba-sys"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
libc = "0.2"

# Only the native build links zlib; the wasm build configures mgba with
# DISABLE_DEPS (via LIBMGBA_ONLY) and needs none.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libz-sys = { version = "1.1.0", default-features = false, features = ["libc"] }

[build-dependencies]
bindgen = "0.72"
cc = "1"
cmake = "0.1"
shell-words = "1.1"
